feat(backend) improve impl
added search and list of clinics
added new fields (description, address, phone, email, website, opening_hours, specialties)
search by dentist removed
